ci/kubernetes.tpl.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: _APP_NAME_-_CI_ENVIRONMENT_SLUG_-svc
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: _APP_NAME_-_CI_ENVIRONMENT_SLUG_
