ci/kubernetes.tpl.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: _APP_NAME_-_CI_ENVIRONMENT_SLUG_-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    # letsencrypt support enabled (https://github.com/jetstack/kube-lego)
    kubernetes.io/tls-acme: "true"
    # use the Kubernetes ingress "nginx"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: paywithmintifi-qa._MY_DOMAIN_
    http:
      paths:
      - path: /
        backend:
          serviceName: _APP_NAME_-_CI_ENVIRONMENT_SLUG_-svc
          servicePort: 3000
